[#146] - Definir e implementar endpoint para obtener tratamiento por id (#147)
* [#146] - Definir e implementar endpoint para obtener tratamiento por id

* [#146] - Añadir nombre de medicamento a GET de tomas

* [#146] - Manejar 404 not found

* [#146] - Arreglar conflictos rebase
