# api/openapi.yaml
@@ -104,7 +104,56 @@ paths:
 
   /treatments/{treatmentId}:
     get:
-      summary: Obtener tomas de un tratamiento
+      summary: Obtener datos de un tratamiento específico
+      operationId: getTreatmentById
+      parameters:
+        - in: path
+          name: treatmentId
+          schema:
+            type: number
+          required: true
+          description: ID del tratamiento
+      responses:
+        "200":
+          description: Datos del tratamiento
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Treatment"
+        "400":
+          description: Solicitud incorrecta
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: "Bad Request"
+        "404":
+          description: Tratamiento no encontrado
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: "Not Found"
+        "500":
+          description: Error interno del servidor
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: "Internal Server Error"
+
+  /treatments/{treatmentId}/intakes:
+    get:
+      summary: Obtener todas las tomas de un tratamiento
       operationId: getIntakesByTreatment
       parameters:
         - in: path
@@ -376,6 +425,9 @@ components:
         medicineId:
           type: number
           description: ID del medicamento
+        medicineName:
+          type: string
+          description: Nombre del medicamento
         treatmentId:
           type: number
           description: ID del tratamiento
@@ -402,6 +454,7 @@ components:
       required:
         - id
         - medicineId
+        - medicineName
         - treatmentId
         - startDate
         - doseAmount
